<resources>
    <string name="app_name">Tuasol Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_of_user_Image_view_desc">TODO select user image in this imageview</string>
    <string name="lasst_message_e_g">Hi Mubarak How Are You .......</string>
    <string name="_9_13_am_e_g">9:13 AM</string>
    <string name="user_name_TV_eg">User Name</string>
    <string name="unread_messsages_count_e_g">47</string>
    <string name="header_main_messages_fragment_name">Messages</string>
    <string name="search_hint_name">Search</string>
    <string name="groups">Groups</string>
    <string name="calls">Calls</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="searchbutton">SearchButton</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="add_to_favorates">Add to favorates</string>
    <string name="block">Block</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="hi_mubarak_how_are_you">Hi Mubarak How Are You.....</string>
    <string name="_9_13_am">9:13 AM</string>
</resources>