<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controller.subModels.ChatListItemFragment"
    android:padding="8dp"
    android:background="@color/black"
    >


    <ImageView
        android:id="@+id/ProfileImageImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circle_shape_background"
        android:backgroundTint="@color/black_backgrounded"
        android:contentDescription="@string/profile_of_user_Image_view_desc"
        android:foregroundGravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:maxHeight="35dp"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/user_name_TV_eg"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/UnreadMessagesCountTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/ProfileImageImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LastMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:maxHeight="20dp"
        android:layout_marginStart="4dp"
        android:text="@string/lasst_message_e_g"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LastMessageDateTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/ProfileImageImageView"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextView" />

    <TextView
        android:id="@+id/LastMessageDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:text="@string/_9_13_am_e_g"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/LastMessageTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UnreadMessagesCountTextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/UnreadMessagesCountTextView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/circle_shape_background"
        android:backgroundTint="@color/black_backgrounded"
        android:gravity="center"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/unread_messsages_count_e_g"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/UserNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/UserNameTextView"
        />



</androidx.constraintlayout.widget.ConstraintLayout>